fixed text align over pictures

--- a/style.css
+++ b/style.css
@@ -136,10 +136,9 @@ div {
 .flex-container {
     display: flex;
     margin-left: 0;
-    border-left-style: 5px solid color white;
     height: 200px;
     padding-top: 50px;
-    padding-left: 200px;
+    padding-left: 100px;
     margin-top: 50px;
     text-align: center;
 }
@@ -151,16 +150,35 @@ div {
     box-sizing: border-box color white;
 }
 
+#prework a {
+    position: relative;
+    left: 180px;
+    top: -10px;
+} 
+
 .horiseon {
     text-align: center;
     padding-right: 30px;
     padding-left: 30px;
 }
 
+#horiseon a {
+    position: relative;
+    left: 180px;
+    top: -10px;
+}
+
 #future {
+    position: relative;
     padding-top: 70px;
     text-align: center;
     padding-left: 280px;
+} 
+
+#future a{
+    position: absolute;
+    right: 220px;
+    top: 40px;
 }
 
 img {
